[package]
name = "alice-signal"
version = "1.0.0"
edition = "2021"
authors = ["Moroya Sakamoto <sakamoro@alicelaw.net>"]
license = "MIT OR Apache-2.0"
description = "Pure Rust digital signal processing: FFT, FIR/IIR filters, wavelet transforms, window functions, convolution, correlation, PSD, decimation/interpolation"

[lib]
crate-type = ["rlib"]
